Version 5.3.0 (TBD)
    Added `uploadUri` and `blobInfo` to `editorUpload.uploadImages` return type #TINY-4579
    Changed the `link`, `image` and `paste` plugins to use Promises to reduce the bundle size #TINY-4710
    Changed the default icons to be lazy loaded during initialization #TINY-4729
    Changed so base64 encoded urls are converted to blob urls when content is parsed #TINY-4727
    Changed context toolbars so they concatenate when more than one is suitable for the current selection #TINY-4495
    Changed inline style element formats (strong, b, em, i, u, strike) to convert to a span on format removal if a `style` or `class` attribute is present #TINY-4741
    Fixed the `selection.setContent()` API not running parser filters #TINY-4002
    Fixed the `quickimage` button not restricting the file types to images #TINY-4715
    Fixed resize handlers displaying in the wrong location sometimes for remote images #TINY-4732
    Fixed table picker breaking in Firefox on low zoom levels #TINY-4728
    Fixed issue with loading or pasting contents with large base64 encoded images on Safari #TINY-4715
    Fixed supplementary special characters being truncated when inserted into the editor. Patch contributed by mlitwin. #TINY-4791
    Fixed toolbar buttons not set to disabled when the editor is in readonly mode #TINY-4592
    Fixed bug where title, width, height would be set to empty string values when updating an image and removing those using the image dialog #TINY-4786
    Fixed the placeholder not hiding when pasting content into the editor #TINY-4828
    Fixed an issue where the editor would fail to load if local storage was disabled #TINY-5935
Version 5.2.2 (2020-04-23)
    Fixed an issue where anchors could not be inserted on empty lines #TINY-2788
    Fixed text decorations (underline, strikethrough) not consistently inheriting the text color #TINY-4757
    Fixed `format` menu alignment buttons inconsistently applying to images #TINY-4057