@@ -1,10 +1,11 @@
 import { FieldSchema, ValueSchema } from '@ephox/boulder';
-import { Fun, Result } from '@ephox/katamari';
+import { Fun, Result, Option } from '@ephox/katamari';
 
 import { CommonMenuItem, CommonMenuItemApi, commonMenuItemFields, CommonMenuItemInstanceApi } from './CommonMenuItem';
 
 export interface ToggleMenuItemApi extends CommonMenuItemApi {
   type?: 'togglemenuitem';
+  icon?: string;
   active?: boolean;
   onSetup?: (api: ToggleMenuItemInstanceApi) => void;
   onAction: (api: ToggleMenuItemInstanceApi) => void;
@@ -17,6 +18,7 @@ export interface ToggleMenuItemInstanceApi extends CommonMenuItemInstanceApi {
 
 export interface ToggleMenuItem extends CommonMenuItem {
   type: 'togglemenuitem';
+  icon: Option<string>;
   active: boolean;
   onSetup: (api: ToggleMenuItemInstanceApi) => (api: ToggleMenuItemInstanceApi) => void;
   onAction: (api: ToggleMenuItemInstanceApi) => void;
@@ -26,7 +28,8 @@ export const toggleMenuItemSchema = ValueSchema.objOf([
   FieldSchema.strictString('type'),
   FieldSchema.defaultedBoolean('active', false),
   FieldSchema.defaultedFunction('onSetup', () => Fun.noop),
-  FieldSchema.strictFunction('onAction')
+  FieldSchema.strictFunction('onAction'),
+  FieldSchema.optionString('icon')
 ].concat(commonMenuItemFields));
 
 export const createToggleMenuItem = (spec: ToggleMenuItemApi): Result<ToggleMenuItem, ValueSchema.SchemaError<any>> => ValueSchema.asRaw('togglemenuitem', toggleMenuItemSchema, spec);
